Correct form spacing and checkout mistakes

--- a/themes/classic/_dev/css/components/checkout.scss
+++ b/themes/classic/_dev/css/components/checkout.scss
@@ -20,9 +20,10 @@ body#checkout {
   }
   .custom-checkbox {
     display: flex;
+
     span {
       flex: 0 0 15px;
-      margin-top: 0.1875rem;
+      margin-top: -0.125rem;
     }
   }
   a:hover {
@@ -195,7 +196,6 @@ body#checkout {
       cursor: pointer;
     }
     .custom-radio {
-      margin-right: 0;
       input[type="radio"] {
         width: 1.25rem;
         height: 1.25rem;
